# bookforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
bookforge/: __init__.py  cli.py  main.py
bookforge/ai/: anthropic_provider.py  base.py  generators.py  openai_provider.py  prompt_loader.py  rewriter.py  stage.py
bookforge/api/: auth.py  routes.py  schemas.py
bookforge/assembly/: assembler.py  deduplicator.py  ordering.py
bookforge/core/: config.py  exceptions.py  logging.py  models.py  pipeline.py  registry.py
bookforge/export/: base.py  calibre_polish.py  docx_exporter.py  docx_table_borders.py  epub_exporter.py  equation_renderer.py  pdf_exporter.py
bookforge/ingestion/: base.py  detector.py  docx_ingester.py  epub_ingester.py  html_ingester.py  markdown_ingester.py  ocr_ingester.py  pdf_ingester.py  txt_ingester.py
bookforge/jobs/: manager.py  models.py  store.py  worker.py
bookforge/metadata/: reader.py  validator.py
bookforge/normalization/: equation_detector.py  html_cleaner.py  normalizer.py  structure_detector.py  table_standardizer.py
bookforge/structure/: builder.py  front_matter.py  toc_generator.py
bookforge/templates/: loader.py
config/: columns.yaml  default.yaml
config/prompts/: acknowledgement.txt  preface.txt  rewrite.txt  title.txt
data/: test_input.html
docs/: ARCHITECTURE.md  GAP_ANALYSIS.md  IMPLEMENTATION.md  REQUIREMENTS.md  SCALABILITY_REVIEW.md  SETUP.md  TEMPLATES.md
scripts/: generate_samples.py
templates/academic/: config.yaml  print.css  (+3 more)
tests/: conftest.py
(+36 files in other folders)
